--- a/final.ipynb
+++ b/final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5fb85cbb",
+   "id": "a0640dc4",
    "metadata": {},
    "source": [
     "# Sentiment Analysis of Twitter Text\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b28a54e6",
+   "id": "7f8d54aa",
    "metadata": {},
    "source": [
     "## Load data and pre-processing"
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "280f7945",
+   "id": "b2b38e41",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "c1dc7a13",
+   "id": "8de6b90e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b1b06a08",
+   "id": "6e17996f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "4b4fb915",
+   "id": "23763a62",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "cf3cbe48",
+   "id": "121da1d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,8 +296,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 78,
+   "id": "7c560ad0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27481"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(tweets)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
-   "id": "62811a6c",
+   "id": "8044cd5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09ffa341",
+   "id": "17723d58",
    "metadata": {},
    "source": [
     "## Train the embeddings\n",
@@ -337,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "64689c6f",
+   "id": "2fb5f3ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "d1edc992",
+   "id": "02e707a7",
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "34bc85ce",
+   "id": "68998604",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "3d935319",
+   "id": "cc2b800a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "789c71c1",
+   "id": "8b892906",
    "metadata": {},
    "source": [
     "## Train logistic regression model"
@@ -423,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "1aad13c2",
+   "id": "3a59d517",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "49090ede",
+   "id": "3625dc40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "00944ab3",
+   "id": "ee9f5276",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "36f32a20",
+   "id": "f719cf2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,8 +489,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "d2c1e3a6",
+   "execution_count": 65,
+   "id": "d40655bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +507,7 @@
     "def words_to_sentiment(words):\n",
     "    vecs = embeddings.loc[embeddings.index.isin(words)].dropna()\n",
     "    # if word is in embedding list\n",
-    "    if vecs.empty():\n",
+    "    if vecs.empty:\n",
     "        log_odds = 0\n",
     "    else:\n",
     "        log_odds = vecs_to_sentiment(vecs)\n",
@@ -502,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0d98fdd",
+   "id": "2785224a",
    "metadata": {},
    "source": [
     "### Predict label using logistic classification"
@@ -510,52 +531,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "c6a0bb05",
+   "execution_count": 86,
+   "id": "29f4973b",
    "metadata": {},
    "outputs": [],
    "source": [
     "def log_predict(tweets):\n",
     "    log_labels = []\n",
+    "    i = 0\n",
     "    for tweet in tweets:\n",
+    "#         print(i)\n",
     "        score = text_to_sentiment(tweet)\n",
     "        if score > 0:\n",
     "            log_labels.append('positive')\n",
-    "        if score == 0:\n",
-    "            log_labels.append('neutral')\n",
-    "        if score < 0:\n",
+    "        elif score < 0:\n",
     "            log_labels.append('negative')\n",
+    "        else:\n",
+    "            log_labels.append('neutral')\n",
+    "        i += 1\n",
     "    return log_labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "3fe5b646",
+   "execution_count": 87,
+   "id": "af7f27b3",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'bool' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/tp/g__7jx_16dj5dq8w8kblyp380000gr/T/ipykernel_21220/2612196143.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtweet_sentiment\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlog_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtweets\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/var/folders/tp/g__7jx_16dj5dq8w8kblyp380000gr/T/ipykernel_21220/572696585.py\u001b[0m in \u001b[0;36mlog_predict\u001b[0;34m(tweets)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mlog_labels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mtweet\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtweets\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m         \u001b[0mscore\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtext_to_sentiment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtweet\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mscore\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m             \u001b[0mlog_labels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'positive'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/var/folders/tp/g__7jx_16dj5dq8w8kblyp380000gr/T/ipykernel_21220/846557287.py\u001b[0m in \u001b[0;36mtext_to_sentiment\u001b[0;34m(tweet_tok)\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;31m# Compute sentiments for all the tokens and return the mean value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m     \u001b[0msentiment\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwords_to_sentiment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtweet_tok\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0msentiment\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'sentiment'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/var/folders/tp/g__7jx_16dj5dq8w8kblyp380000gr/T/ipykernel_21220/846557287.py\u001b[0m in \u001b[0;36mwords_to_sentiment\u001b[0;34m(words)\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mvecs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0membeddings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0membeddings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwords\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdropna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;31m# if word is in embedding list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mvecs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mempty\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m         \u001b[0mlog_odds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'bool' object is not callable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tweet_sentiment = log_predict(tweets)"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "0d9da7b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27481"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(tweet_sentiment)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "a5be9186",
+   "id": "1f831efc",
+   "metadata": {},
+   "source": [
+    "## Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "7f7a1869",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def precision(gold_labels, predicted_labels):\n",
+    "    \"\"\"\n",
+    "    Calculates the precision for a set of predicted labels give the gold (ground truth) labels.\n",
+    "    Parameters:\n",
+    "          gold_labels (list): a list of labels assigned by hand (\"truth\")\n",
+    "          predicted_labels (list): a corresponding list of labels predicted by the system\n",
+    "    Returns: double precision (a number from 0 to 1)\n",
+    "    \"\"\"\n",
+    "    TP, FP = 0, 0\n",
+    "    for i in range(len(gold_labels)):\n",
+    "        if gold_labels[i] == predicted_labels[i]:\n",
+    "            if predicted_labels[i] == '1':\n",
+    "                TP += 1\n",
+    "        else:\n",
+    "            if predicted_labels[i] == '1':\n",
+    "                FP += 1\n",
+    "    return TP / (TP + FP) if (TP + FP) else 0\n",
+    "\n",
+    "\n",
+    "def recall(gold_labels, predicted_labels):\n",
+    "    \"\"\"\n",
+    "    Calculates the recall for a set of predicted labels give the gold (ground truth) labels.\n",
+    "    Parameters:\n",
+    "      gold_labels (list): a list of labels assigned by hand (\"truth\")\n",
+    "      predicted_labels (list): a corresponding list of labels predicted by the system\n",
+    "    Returns: double recall (a number from 0 to 1)\n",
+    "    \"\"\"\n",
+    "    TP, FN = 0, 0\n",
+    "    for i in range(len(gold_labels)):\n",
+    "        if gold_labels[i] == predicted_labels[i]:\n",
+    "            if predicted_labels[i] == '1':\n",
+    "                TP += 1\n",
+    "        else:\n",
+    "            if predicted_labels[i] != '1':\n",
+    "                FN += 1\n",
+    "    return TP / (TP + FN) if (TP + FN) else 0\n",
+    "\n",
+    "\n",
+    "def f1(gold_labels, predicted_labels):\n",
+    "    \"\"\"\n",
+    "    Calculates the f1 for a set of predicted labels give the gold (ground truth) labels.\n",
+    "    Parameters:\n",
+    "      gold_labels (list): a list of labels assigned by hand (\"truth\")\n",
+    "      predicted_labels (list): a corresponding list of labels predicted by the system\n",
+    "    Returns: double f1 (a number from 0 to 1)\n",
+    "    \"\"\"\n",
+    "    P = precision(gold_labels, predicted_labels)\n",
+    "    R = recall(gold_labels, predicted_labels)\n",
+    "    return 2 * P * R / (P + R) if (P + R) else 0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "58c67954",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27421"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(tweet_sentiment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "55eb2262",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27481"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_tweet[\"sentiment\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "05d80b0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_p = precision(df_tweet[\"sentiment\"], tweet_sentiment)\n",
+    "log_r = recall(df_tweet[\"sentiment\"], tweet_sentiment)\n",
+    "log_f1 = f1(df_tweet[\"sentiment\"], tweet_sentiment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "df8fe747",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 0.0, 0)"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_p, log_r,log_f1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cf300c2",
    "metadata": {},
    "source": [
     "# Citation"
@@ -563,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95aa6a4e",
+   "id": "ffe1fa24",
    "metadata": {},
    "source": [
     "Download the lexicon from http://www.cs.uic.edu/~liub/FBS/opinion-lexicon-English.rar and extract it into `data/positive-words.txt` and `data/negative-words.txt`."
@@ -571,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3997b49d",
+   "id": "0c00150f",
    "metadata": {},
    "source": [
     "The following pre-processing steps are inspired from https://towardsdatascience.com/text-normalization-for-natural-language-processing-nlp-70a314bfa646."
@@ -579,7 +750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1d45c3a",
+   "id": "90b17b55",
    "metadata": {},
    "source": [
     "We also pre-processed data so that it begins with < s> tokens (and ends with < /s> tokens). Inspired from answer: https://stackoverflow.com/questions/37605710/tokenize-a-paragraph-into-sentence-and-then-into-words-in-nltk"
@@ -587,7 +758,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2295ab33",
+   "id": "401b0935",
    "metadata": {},
    "source": [
     "normalize text to regular expression\n",
@@ -597,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a225360b",
+   "id": "37554074",
    "metadata": {},
    "outputs": [],
    "source": []
