--- a/final_bert_embeddings.ipynb
+++ b/final_bert_embeddings.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "id": "b2b38e41",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "id": "8de6b90e",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "id": "6e17996f",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "id": "23763a62",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
        "[27481 rows x 4 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "id": "1a14aed5",
    "metadata": {},
    "outputs": [],
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "id": "d99e8881",
    "metadata": {},
    "outputs": [
@@ -686,7 +686,7 @@
        "[16363 rows x 6 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,17 +697,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "id": "0cdcc309",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def normalize_encode_tweet(tweet):\n",
-    "    norm = tokenizer.normalizeTweet(tweet)\n",
-    "    encoded = tokenizer.encode(norm)\n",
-    "    return encoded\n",
+    "# def normalize_encode_tweet(tweet):\n",
+    "#     norm = tokenizer.normalizeTweet(tweet)\n",
+    "#     encoded = tokenizer.encode(norm)\n",
+    "#     return encoded\n",
     "\n",
-    "from sentence_transformers import SentenceTransformer\n",
+    "# from sentence_transformers import SentenceTransformer\n",
     "roberta_model = SentenceTransformer('paraphrase-distilroberta-base-v1');\n",
     "def normalize_encode_tweet(tweet):\n",
     "    norm = tokenizer.normalizeTweet(tweet)\n",
@@ -720,7 +720,7 @@
    "execution_count": 32,
    "id": "60417dfd",
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -761,18 +761,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
+   "id": "e32bb94c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 16363/16363 [12:04<00:00, 22.57it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "\n",
+    "# show progress\n",
+    "tqdm.pandas()\n",
+    "\n",
+    "# https://www.geeksforgeeks.org/create-a-new-column-in-pandas-dataframe-based-on-the-existing-columns/\n",
+    "df_tweet_bert['embedding'] =  df_tweet_bert.progress_apply(lambda row: normalize_encode_tweet(row.text), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "id": "0b8428c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>level_0</th>\n",
+       "      <th>index</th>\n",
+       "      <th>textID</th>\n",
+       "      <th>text</th>\n",
+       "      <th>selected_text</th>\n",
+       "      <th>sentiment</th>\n",
+       "      <th>embedding</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>549e992a42</td>\n",
+       "      <td>Sooo SAD I will miss you here in San Diego!!!</td>\n",
+       "      <td>Sooo SAD</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>[0.093087755, 0.44367677, 0.11050558, -0.34251...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>088c60f138</td>\n",
+       "      <td>my boss is bullying me...</td>\n",
+       "      <td>bullying me</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>[-0.220892, -0.028724447, 0.1460157, -0.145213...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9642c003ef</td>\n",
+       "      <td>what interview! leave me alone</td>\n",
+       "      <td>leave me alone</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>[0.011180244, -0.42562425, 0.10249197, -0.4529...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>358bd9e861</td>\n",
+       "      <td>Sons of ****, why couldn`t they put them on t...</td>\n",
+       "      <td>Sons of ****,</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>[0.17745222, 0.28441083, 0.059978485, 0.294703...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6e0c6d75b1</td>\n",
+       "      <td>2am feedings for the baby are fun when he is a...</td>\n",
+       "      <td>fun</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>[-0.10432586, 0.26830515, -0.15316525, -0.0983...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   level_0  index      textID  \\\n",
+       "0        1      1  549e992a42   \n",
+       "1        2      2  088c60f138   \n",
+       "2        3      3  9642c003ef   \n",
+       "3        4      4  358bd9e861   \n",
+       "4        6      6  6e0c6d75b1   \n",
+       "\n",
+       "                                                text   selected_text  \\\n",
+       "0      Sooo SAD I will miss you here in San Diego!!!        Sooo SAD   \n",
+       "1                          my boss is bullying me...     bullying me   \n",
+       "2                     what interview! leave me alone  leave me alone   \n",
+       "3   Sons of ****, why couldn`t they put them on t...   Sons of ****,   \n",
+       "4  2am feedings for the baby are fun when he is a...             fun   \n",
+       "\n",
+       "  sentiment                                          embedding  \n",
+       "0  negative  [0.093087755, 0.44367677, 0.11050558, -0.34251...  \n",
+       "1  negative  [-0.220892, -0.028724447, 0.1460157, -0.145213...  \n",
+       "2  negative  [0.011180244, -0.42562425, 0.10249197, -0.4529...  \n",
+       "3  negative  [0.17745222, 0.28441083, 0.059978485, 0.294703...  \n",
+       "4  positive  [-0.10432586, 0.26830515, -0.15316525, -0.0983...  "
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_tweet_bert.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b898d653",
+   "execution_count": 53,
+   "id": "321cbe2e",
    "metadata": {},
    "outputs": [],
    "source": [
